--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-13 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Put hacky code in lw6-fix.c + documented funcs.
+
 2010-07-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed bug 30409, forcing DYLD_LIBRARY_PATH on Mac OS X.
