--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-07-13 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Packaging script in ./pkg now rely on .tar.gz in parent dir.
+
 	* Put hacky code in lw6-fix.c + documented funcs.
 
 2010-07-12 : Christian Mauduit <ufoot@ufoot.org>
