--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,10 +1,10 @@
 2010-07-14 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Fixed bug 30409 (again...) symlink to .dylib + DYLD_FALLBACK_LIBRARY_PATH
+
 	* Added Mac OS X alert box on error.
 
 	* Added functions to execute the program again (re-run myself).
-
-	* Fixed bug 30409 (again...) copied libpng12.0.dylib to libpng12.dylib
 
 2010-07-13 : Christian Mauduit <ufoot@ufoot.org>
 
