--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,9 @@
 2010-07-14 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Trying to fix bug 28030, proportional removing of players on death.
+
+2010-07-14 : Christian Mauduit <ufoot@ufoot.org>
+
 	* Fixed bug 30409 (again...) symlink to .dylib + DYLD_FALLBACK_LIBRARY_PATH
 
 	* Added Mac OS X alert box on error.
