--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-19 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Program can now discover local IP address.
+
 2010-07-15 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added low-level filter tool for list objects.
