Added codename and stamp do doc title page.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-20 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added codename and stamp do doc title page.
+
 2010-07-19 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Node URL displayed at startup.
